# oarplayer

./: LICENSE  README.md  build.gradle  gradle.properties  settings.gradle
app/: build.gradle  proguard-rules.pro
app/src/androidTest/java/com/wodekouwei/demo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/wodekouwei/demo/: MainActivity.java  PlayerAty.java
app/src/main/res/layout/: activity_main.xml  activity_player.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/wodekouwei/demo/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
nativemediacodec/: .gitignore  CMakeLists.txt  build.gradle
nativemediacodec/src/androidTest/java/com/wodekouwei/nativemediacodec/: ExampleInstrumentedTest.java
nativemediacodec/src/main/: AndroidManifest.xml
nativemediacodec/src/main/cpp/: oar_native_mediacodec.c  oar_native_mediacodec.h  oar_native_video_mediacodec.c  oar_native_video_mediacodec.h
nativemediacodec/src/main/res/values/: strings.xml
nativemediacodec/src/test/java/com/wodekouwei/nativemediacodec/: ExampleUnitTest.java
oarplayer/: CMakeLists.txt  build.gradle  gradle-mvn-push.gradle  gradle.properties
oarplayer/src/androidTest/java/com/wodekouwei/srsrtmpplayer/: ExampleInstrumentedTest.java
oarplayer/src/main/: AndroidManifest.xml
oarplayer/src/main/cpp/: _android.h  jni_utils.c  jni_utils.h  oar_audio_mediacodec.c  oar_audio_mediacodec.h  oar_audio_mediacodec_ctx.c  oar_audio_mediacodec_ctx.h  oar_audio_mediacodec_java.c  oar_audio_mediacodec_java.h  oar_audio_mediacodec_ndk.c  oar_audio_mediacodec_ndk.h  oar_audio_player.c  oar_audio_player.h  oar_clock.c  oar_clock.h  oar_frame_queue.c  oar_frame_queue.h  oar_glsl_program.c  oar_glsl_program.h  oar_jni_reflect.c  oar_jni_reflect.h  oar_macro.h  oar_mediacodec.c  oar_mediacodec.h  oar_native_mediacodec.h  oar_packet_queue.c  oar_packet_queue.h  oar_player.c  oar_player.h  oar_player_audio_hw_decode_thread.c  oar_player_audio_hw_decode_thread.h  oar_player_gl_thread.c  oar_player_gl_thread.h  oar_player_video_hw_decode_thread.c  oar_player_video_hw_decode_thread.h  oar_texture.c  oar_texture.h  oar_video_mediacodec.c  oar_video_mediacodec.h  oar_video_mediacodec_ctx.c  (+14 more)
oarplayer/src/main/java/com/wodekouwei/srsrtmpplayer/: OARPlayer.java  SrsPlayer.java
oarplayer/src/main/java/com/wodekouwei/srsrtmpplayer/proxy/: HwAudioDecodeWrapper.java  HwDecodeWrapper.java  HwVideoDecodeWrapper.java  SurfaceTextureWrapper.java
oarplayer/src/main/res/values/: strings.xml
oarplayer/src/test/java/com/wodekouwei/srsrtmpplayer/: ExampleUnitTest.java
